after ading the options as visuals in challenge api